# pypersim-demo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  capabilities.md  database.md
docs/adr/: 001-database-and-vector-store.md  002-item-detail-storage.md  003-drop-item-feature-vectorisation.md  004-tool-interface-vectorisation.md
docs/tools/: agent-tool-specifications.md
docs/tools/assortment/: get_item.yaml  semantic_product_search.yaml
scripts/: ingest_amazon.py
src/pypersim_demo/: config.py  context.py
src/pypersim_demo/agents/: agent.py
src/pypersim_demo/db/: __init__.py  engine.py  models.py  vectors.py
src/pypersim_demo/db/services/: __init__.py  _errors.py  assortment.py
src/pypersim_demo/schemas/: __init__.py  assortment.py
src/pypersim_demo/tools/: _core.py  assortment.py
tests/: test_config.py  test_engine.py
tests/agents/: test_agent.py
tests/db/: test_engine.py
tests/db/services/: test_assortment.py  test_errors.py
tests/scripts/: test_ingest.py
tests/tools/: test_assortment.py  test_core.py
